<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">auto-contact-exchange</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next">Next</string>
    <string name="intro">Hey there! Just add a contact regularly to automatically have your information sent. ***LINK TO WEB STUFF***</string>
    
    <string name="pref_mesg_type">Auto-Response Protocol</string>
    <string name="pref_mesg_type_summary">The way the auto-response is sent.</string>
    <string name="pref_mesg_type_dialog">Message Types</string>
    <string name="pref_mesg_type_default">MMS</string>
    
    <string name="pref_mesg_str">Auto-Response Text</string>
    <string name="pref_mesg_str_summary">The formatted message to send.</string>
    <string name="pref_mesg_str_dialog">Auto-Response Text</string>
    <string name="pref_mesg_str_format">Keywords wrapped in {} will be replaced with the text they describe. Available keywords: {myname}, {myfirst}, {mylast}, {mynumber}, {yourname}, {yourfirst}, {yourlast}.</string>
	<string name="pref_mesg_str_default">Hey, it\'s {myname}. My full contact info is here. Sent from my Potato.</string>
	
	<string name="btn_settings">Settings</string>
	<string name="app_id">698720513525092</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    
</resources>
